fix copyright spacing

--- a/css/style.css
+++ b/css/style.css
@@ -494,6 +494,10 @@
 .footer {
   padding: 9.6rem 0;
 }
+.logo-col {
+  display: flex;
+  flex-direction: column;
+}
 .footer-logo {
   display: block;
   margin-bottom: 3.2rem;
@@ -506,6 +510,12 @@
 .social-icon {
   height: 2.4rem;
   width: 2.4rem;
+}
+.copyright {
+  font-size: 1.4rem;
+  color: #767676;
+  line-height: 1.6;
+  margin-top: auto;
 }
 
 .footer-heading {
